# POOSE

./: README.md
battleship_projekt_2-main/: CMakeLists.txt  README.md  requirements.txt  rest_client.py  rest_server.py
battleship_projekt_2-main/docs/: Anforderungen.md  battleship_uml.puml
battleship_projekt_2-main/examples/: griddemo.cpp
battleship_projekt_2-main/include/project_battleship/: game.hpp  grid.hpp  player.hpp  server.hpp  ship.hpp
battleship_projekt_2-main/src/: game.cpp  grid.cpp  server.cpp  ship.cpp
battleship_projekt_2-main/tests/: Game_test.cpp  Grid_test.cpp
